[gd_scene load_steps=3 format=3 uid="uid://c5b1rrrdeysj3"]

[ext_resource type="Script" uid="uid://mfy244fpx3oj" path="res://Scenes/EquationBoard/equation_board.gd" id="1_5rk8r"]
[ext_resource type="PackedScene" uid="uid://shcfqf0hlsfq" path="res://Scenes/EquationBoard/equation_row.tscn" id="2_8qyjv"]

[node name="EquationBoard" type="Node2D"]
script = ExtResource("1_5rk8r")

[node name="EquationRow1" parent="." instance=ExtResource("2_8qyjv")]

[node name="EquationRow3" parent="." instance=ExtResource("2_8qyjv")]
position = Vector2(0, 256)
